--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -60,8 +60,20 @@
     color: $color-input-dark;
   }
 
+  &_normal {
+    font-weight: 400;
+  }
+
+  &_underline-light {
+    border-bottom-color: $color-border-light;
+  }
+
   .is-top & {
     border-bottom-color: $color-basic;
+
+    &_underline-light {
+      border-bottom-color: $color-border-light;
+    }
   }
 
   .is-error & {
