--- a/app/blocks/time/time.scss
+++ b/app/blocks/time/time.scss
@@ -56,6 +56,18 @@
       }
     }
 
+    &_fz20 {
+      @include heading-4;
+
+      line-height: (30 / 20);
+
+      @include screen('sm') {
+        @include text16;
+
+        line-height: (20 / 16);
+      }
+    }
+
     &_abs {
       position: absolute;
       bottom: 28px;
@@ -69,6 +81,19 @@
           right: auto;
           left: 0;
         }
+      }
+    }
+
+    &_block {
+      display: block;
+      width: 100%;
+    }
+
+    &_tar {
+      text-align: right;
+
+      @include screen('sm') {
+        text-align: left;
       }
     }
   }
