--- a/app/components/popup-new-offer/popup-new-offer.pug
+++ b/app/components/popup-new-offer/popup-new-offer.pug
@@ -33,7 +33,7 @@ mixin popup-new-offer()
           +e.info_btn
             +e.info-cell._big._no-sm-top
             +e.info-cell._no-sm-top
-              +button()._shorter._smaller._fz14._mh35._wide.__button Make new offer
+              +button('button')._shorter._smaller._fz14._mh35._wide.__button(type="submit") Make new offer
 
     block
 
