--- a/app/blocks/dialog/dialog.pug
+++ b/app/blocks/dialog/dialog.pug
@@ -20,6 +20,33 @@ mixin dialog2()
   +b.UL.dialog&attributes(attributes)
     +e.LI.block
       +e.UL.list
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('', 'You’ve requested Tenancy')
+              +offer-info
+                +box._big._blue
+                +e.title._fz16 MEETING ROOM
+            +notification-content._spd
+              +time-origin.__time_dark
+                +time-text
+                  +time-text From:
+                    +time-time('2018-10-30') 30 October 2018
+                  +time-text._fz20._block
+                    b 14:30
+                +long-arrow._big.__divider
+                +time-text
+                  +time-text Till:
+                    +time-time('2019-10-30') 30 October 2019
+                  +time-text._fz20._block._tar
+                    b 16:30
+            +notification-table
+              +e.TR.row
+                +e.TD.cell_w38
+                  +short-info('Price:')
+                    +e.text &pound; 560.90 mo
+                +e.TD.cell_w62
+                  +short-info('Reservation status:')._taright
+                    +e.text Awating confirmation
         +bubble('li', '15:45', "2018-10-29T15:45")._notification.__item_wide
           +notification
             +notification-head('Action required:')
@@ -408,6 +435,33 @@ mixin dialog3()
         +bubble('li', '15:45', "2018-10-27T15:45", true)._dark._mob-notime.__item I have ordered HOT DESK in your Building in East London. o the question is if i am able to have an access to your sports area when im ordering HOT DESK?
         +bubble('li', '15:45', "2018-10-27T15:45", true)._dark._mob-notime.__item Hello. Well, let me think a little...
       +e.UL.list
+        +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
+          +notification
+            +notification-head('', 'You’ve requested Tenancy')
+              +offer-info
+                +box._big._blue
+                +e.title._fz16 Meeting room
+            +notification-content._spd
+              +time-origin.__time_dark
+                +time-text
+                  +time-text From:
+                    +time-time('2018-10-30') 30 October 2018
+                  +time-text._fz20._block
+                    b 14:30
+                +long-arrow._big.__divider
+                +time-text
+                  +time-text Till:
+                    +time-time('2019-10-30') 30 October 2019
+                  +time-text._fz20._block._tar
+                    b 16:30
+            +notification-table
+              +e.TR.row
+                +e.TD.cell_w38
+                  +short-info('Price:')
+                    +e.text &pound; 560.90 mo
+                +e.TD.cell_w62
+                  +short-info('Reservation status:')._taright
+                    +e.text Awating confirmation
         +bubble('li', '15:45', "2018-10-29T15:45")._notification._mob-notime.__item_wide
           +notification.is-new
             +notification-head('Action required:')
