--- a/app/components/form-order-summary/form-order-summary.pug
+++ b/app/components/form-order-summary/form-order-summary.pug
@@ -24,26 +24,40 @@ mixin form-order-summary(editable)
         +info-editable-name Amount:
         +info-editable-field 1
     +e.dates.form-order-summary__dates
-      +info-editable.__line
-        +info-editable-name Rent period start:
-        - if (editable) {
-          +info-editable-field._date
-            +e.text(data-copy-date) 26 October 2019
-            +e.INPUT.date.js-change-date(type="text" name="rentStart" value="2019-10-26" readonly data-period-start="rent1")
-        - } else {
-          +info-editable-field 26 October 2019
-        - }
-      +e.dates-icon
-        +icon('download').dates-arrow
-      +info-editable.__line
-        +info-editable-name Rent period end:
-        - if (editable) {
-          +info-editable-field._date
-            +e.text(data-copy-date) 26 October 2020
-            +e.INPUT.date.js-change-date(type="text" name="rentEnd" value="2020-10-26" readonly data-period-end="rent1" data-mindate="2019-10-26")
-        - } else {
-          +info-editable-field 26 October 2020
-        - }
+      if (editable)
+        +e.line_flex._sm-mg30
+          +e.dates-cell_big
+            +form-section-wrapper
+              +form-box('Rent period start:', 'calendar2')._icon._icon_s15._lbl-nochange
+                +input.input_underline-light.input_normal.js-datepicker(type="text" name="startDate" value="26 May 2020" placeholder="Rent period start:" data-period-start="rent" readonly)
+          +e.dates-cell
+            +form-section-wrapper
+              +form-box('', 'time-3h')._icon._icon_s15._lbl-nochange
+                +input.input_underline-light.input_normal(type="text" name="startTime" value="14:30" placeholder="Time" data-period-start="rent")
+        +e.dates-icon_mg-big
+          +icon('download').dates-arrow
+        +e.line_flex._sm-mg30
+          +e.dates-cell_big
+            +form-section-wrapper
+              +form-box('Rent period end:', 'calendar2')._icon._icon_s15._lbl-nochange
+                +input.input_underline-light.input_normal.js-datepicker(type="text" name="endDate" value="26 May 2020" placeholder="Rent end date:" data-period-end="rent" data-mindate="2020-5-26" readonly)
+          +e.dates-cell
+            +form-section-wrapper
+              +form-box('', 'time-3h')._icon._icon_s15._lbl-nochange
+                +input.input_underline-light.input_normal(type="text" name="endTime" value="16:30" placeholder="Time")
+      else
+        +info-editable._date.__line
+          +info-editable-name Rent period start:
+          +info-editable-field
+            +e.SPAN.item 26 May 2019
+            +e.B.item_bold 14:30
+        +e.dates-icon
+          +icon('download').dates-arrow
+        +info-editable._date.__line
+          +info-editable-name Rent period end:
+          +info-editable-field
+            +e.SPAN.item 26 May 2019
+            +e.B.item_bold 16:30
     div.form-order-summary__section
       +info-editable.__line
         +info-editable-name Price:
@@ -115,26 +129,40 @@ mixin form-order-summary-mobile(editable)
             +info-editable-name Amount:
             +info-editable-field 1
         +e.dates.form-order-summary__dates
-          +info-editable.__line
-            +info-editable-name Rent period start:
-            - if (editable) {
-              +info-editable-field._date
-                +e.text(data-copy-date) 26 October 2019
-                +e.INPUT.date.js-change-date(type="text" name="rentStart" value="2019-10-26" readonly data-period-start="rent2")
-            - } else {
-              +info-editable-field 26 October 2019
-            - }
-          +e.dates-icon
-            +icon('download').dates-arrow
-          +info-editable.__line
-            +info-editable-name Rent period end:
-            - if (editable) {
-              +info-editable-field._date
-                +e.text(data-copy-date) 26 October 2020
-                +e.INPUT.date.js-change-date(type="text" name="rentEnd" value="2020-10-26" readonly data-period-end="rent2" data-mindate="2019-10-26")
-            - } else {
-              +info-editable-field 26 October 2020
-            - }
+          if (editable)
+            +e.line_flex._sm-mg30
+              +e.dates-cell_big
+                +form-section-wrapper
+                  +form-box('Rent period start:', 'calendar2')._icon._icon_s15._lbl-nochange
+                    +input.input_underline-light.input_normal.js-datepicker(type="text" name="startDate" value="26 May 2020" placeholder="Rent period start:" data-period-start="rent" readonly)
+              +e.dates-cell
+                +form-section-wrapper
+                  +form-box('', 'time-3h')._icon._icon_s15._lbl-nochange
+                    +input.input_underline-light.input_normal(type="text" name="startTime" value="14:30" placeholder="Time" data-period-start="rentMobile")
+            +e.dates-icon_mg-big
+              +icon('download').dates-arrow
+            +e.line_flex._sm-mg30
+              +e.dates-cell_big
+                +form-section-wrapper
+                  +form-box('Rent period end:', 'calendar2')._icon._icon_s15._lbl-nochange
+                    +input.input_underline-light.input_normal.js-datepicker(type="text" name="endDate" value="26 May 2020" placeholder="Rent end date:" data-period-end="rentMobile" data-mindate="2020-5-26" readonly)
+              +e.dates-cell
+                +form-section-wrapper
+                  +form-box('', 'time-3h')._icon._icon_s15._lbl-nochange
+                    +input.input_underline-light.input_normal(type="text" name="endTime" value="16:30" placeholder="Time")
+          else
+            +info-editable._date.__line
+              +info-editable-name Rent period start:
+              +info-editable-field
+                +e.SPAN.item 26 May 2019
+                +e.B.item_bold 14:30
+            +e.dates-icon
+              +icon('download').dates-arrow
+            +info-editable._date.__line
+              +info-editable-name Rent period end:
+              +info-editable-field
+                +e.SPAN.item 26 May 2019
+                +e.B.item_bold 16:30
         div.form-order-summary__section
           +info-editable.__line
             +info-editable-name Price:
