--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -19,6 +19,18 @@
     padding: 32px 0 28px;
   }
 
+  &_mcpad {
+    padding: 22px 0 35px;
+
+    @include screen('md') {
+      padding: 22px 0 30px;
+    }
+
+    @include screen('sm') {
+      padding: 19px 0;
+    }
+  }
+
   &_spad {
     @include screen('md') {
       padding: 36px 0 30px;
