--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -170,6 +170,7 @@ include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
 include ../components/page-header/page-header
 include ../components/pivot-table/pivot-table
+include ../components/policy/policy
 include ../components/popup-add-offer-tc/popup-add-offer-tc
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
