--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -59,6 +59,7 @@ block content
         +link(href="profile-kyc-states2.html") Profile | KYC - UBO confirmed (profile-kyc-states2.html)
         +link(href="profile-kyc-states3.html") Profile | KYC - UBO refused (profile-kyc-states3.html)
         +link(href="system.html") Space pool - system messages (system.html)
+        +link(href="policy.html") Space pool - Privacy policy (policy.html)
 
       +page-title._small Попапы
       +e.list
