--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -46,11 +46,27 @@
 
   &-container.is-top {
     .fancybox-slide {
-      padding: 6vw 0 0;
+      // padding: 6vw 0 0;
       box-sizing: border-box;
 
       @include screen('sm') {
         padding: 0;
+      }
+    }
+
+    .popup-wrapper {
+      display: block;
+      box-sizing: border-box;
+      width: 100%;
+      padding: 6vw 0;
+
+      @include screen('sm') {
+        padding: 0;
+      }
+
+      .popup {
+        position: relative;
+        margin: 0 auto;
       }
     }
 
